Disable responsive viewport temporary

--- a/templates/bitcup.tmpl
+++ b/templates/bitcup.tmpl
@@ -4,7 +4,8 @@
     <title>{{if .Title}}{{.Title}} - {{end}}{{AppName}}</title>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bitcup does not support responsive layout currently -->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="manifest" href="{{AppSubUrl}}/manifest.json" crossorigin="use-credentials">
 
