--- a/templates/bitcup.tmpl
+++ b/templates/bitcup.tmpl
@@ -94,7 +94,7 @@
             username: {{.SignedUser.Name}},
             full_name: {{.SignedUser.FullName}},
             email: {{.SignedUser.Email}},
-            avatar_url: {{.SignedUser.RelAvatarLink}},
+            avatar_url: {{.SignedUser.AvatarLink}},
             is_admin: {{.SignedUser.IsAdmin}},
             is_organization: {{.SignedUser.IsOrganization}},
             home_link: {{.SignedUser.HomeLink}},
@@ -106,7 +106,7 @@
             username: {{.ContextUser.Name}},
             full_name: {{.ContextUser.FullName}},
             email: {{.ContextUser.Email}},
-            avatar_url: {{.ContextUser.RelAvatarLink}},
+            avatar_url: {{.ContextUser.AvatarLink}},
             is_admin: {{.ContextUser.IsAdmin}},
             is_organization: {{.ContextUser.IsOrganization}},
             home_link: {{.ContextUser.HomeLink}},
