--- a/templates/user/dashboard/dashboard.tmpl
+++ b/templates/user/dashboard/dashboard.tmpl
@@ -1,4 +1,4 @@
-{{template "bitcup" .}}
+{{template "bitcup/base" .}}
 
 {{define "render"}}
     <script>
@@ -21,92 +21,8 @@
                     opType: {{.GetOpType}},
                     repoLink: {{.GetRepoLink}},
                     time: {{.GetCreate}},
-
-                    message:
-                    {{if eq .GetOpType 1}}
-                        {{$.i18n.Tr "action.create_repo" .GetRepoLink .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 2}}
-                        {{$.i18n.Tr "action.rename_repo" .GetContent .GetRepoLink .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 5}}
-                        {{ $branchLink := .GetBranch | EscapePound | Escape}}
-                        {{$.i18n.Tr "action.commit_repo" .GetRepoLink $branchLink (Escape .GetBranch) .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 6}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.create_issue" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 7}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.create_pull_request" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 8}}
-                        {{$.i18n.Tr "action.transfer_repo" .GetContent .GetRepoLink .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 9}}
-                        {{ $branchLink := .GetBranch | EscapePound | Escape}}
-                        {{$.i18n.Tr "action.push_tag" .GetRepoLink $branchLink .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 10}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.comment_issue" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 11}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.merge_pull_request" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 12}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.close_issue" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 13}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.reopen_issue" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 14}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.close_pull_request" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 15}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.reopen_pull_request" .GetRepoLink $index .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 16}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.delete_tag" .GetRepoLink .GetBranch .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 17}}
-                        {{ $index := index .GetIssueInfos 0}}
-                        {{$.i18n.Tr "action.delete_branch" .GetRepoLink .GetBranch .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 18}}
-                        {{ $branchLink := .GetBranch | EscapePound}}
-                        {{$.i18n.Tr "action.mirror_sync_push" .GetRepoLink $branchLink .GetBranch .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 19}}
-                        {{$.i18n.Tr "action.mirror_sync_create" .GetRepoLink .GetBranch .ShortRepoPath | Str2html}}
-                    {{else if eq .GetOpType 20}}
-                        {{$.i18n.Tr "action.mirror_sync_delete" .GetRepoLink .GetBranch .ShortRepoPath | Str2html}}
-                    {{end}},
-
-                    content:
-                    {{if or (eq .GetOpType 5) (eq .GetOpType 18)}}
-                        [
-                            {{ $push := ActionContent2Commits .}}
-                            {{ $repoLink := .GetRepoLink}}
-                            {{if $push.Commits}}
-                                {{range $push.Commits}}
-                                {
-                                    avatar: {{$push.AvatarLink .AuthorEmail}},
-                                    hash: {{ShortSha .Sha1}},
-                                    link: "{{$repoLink}}\/commit\/{{.Sha1}}",
-                                    message: {{.Message}},
-                                },
-                                {{end}}
-                            {{end}}
-                        ]
-                    {{else if (or (eq .GetOpType 6) (eq .GetOpType 7))}}
-                        {
-                            title: "{{.GetIssueTitle}}",
-                            content: {{.GetIssueContent}},
-                        }
-                    {{else if eq .GetOpType 10}}
-                        {
-                            title: "Re: {{.GetIssueTitle}}",
-                            content: {{index .GetIssueInfos 1}},
-                        }
-                    {{else if eq .GetOpType 11}}
-                        {{index .GetIssueInfos 1}}
-                    {{else if (or (or (eq .GetOpType 12) (eq .GetOpType 13)) (or (eq .GetOpType 14) (eq .GetOpType 15)))}}
-                        {{.GetIssueTitle}}
-                    {{else}}
-                        null
-                    {{end}},
+                    message: {{template "bitcup/user/activity-message" Dict "ctx" $ "Act" .}},
+                    content: {{template "bitcup/user/activity-content" .}},
                 },
                 {{end}}
             ],
@@ -124,7 +40,6 @@
                 },
                 {{end}}
             ],
-                aa:{{.ContextUser.Orgs}}
         });
     </script>
 {{end}}
